add annotations para endpoints
