# app/Http/Controllers/CityController.php
@@ -6,6 +6,7 @@ use App\Http\Requests\CityRequest;
 use App\Http\Requests\CityFilterRequest;
 use App\Http\Resources\CityResource;
 use App\Services\CityService;
+use OpenApi\Attributes as OA;
 
 class CityController extends Controller
 {
@@ -16,14 +17,34 @@ class CityController extends Controller
 
     }
 
+    #[OA\Post(
+        path: "/api/city",
+        summary: "Create new city",
+        responses: [
+            new OA\Response(
+                response: 201,
+                description: 'City created successfully'
+            )
+        ]
+    )]
     public function store(CityRequest $request)
     {
         $data = $request->validated();
         $res = $this->service->create($data);
 
-        return response()->json($res);
+        return response()->json($res, 201);
     }
 
+    #[OA\Put(
+        path: "/api/city/{id}",
+        summary: "Update city",
+        responses: [
+            new OA\Response(
+                response: 200,
+                description: 'City updated successfully'
+            )
+        ]
+    )]
     public function update(CityRequest $request, int $id)
     {
         $data = $request->validated();
@@ -36,6 +57,16 @@ class CityController extends Controller
         ]);
     }
 
+    #[OA\Delete(
+        path: "/api/city/{id}",
+        summary: "Delete city",
+        responses: [
+            new OA\Response(
+                response: 200,
+                description: 'City deleted successfully'
+            )
+        ]
+    )]
     public function destroy(int $id)
     {
         $res = $this->service->delete($id);
@@ -46,12 +77,40 @@ class CityController extends Controller
         ]);
     }
 
+    #[OA\Get(
+        path: "/api/city/{id}",
+        summary: "Get city by ID",
+        responses: [
+            new OA\Response(
+                response: 200,
+                description: 'City Found'
+            ),
+            new OA\Response(
+                response: 404,
+                description: 'City Not Found'
+            )
+        ]
+    )]
     public function show(int $id)
     {
         $res = $this->service->getCity($id);
         return new CityResource($res);
     }
 
+    #[OA\Get(
+        path: "/api/city",
+        summary: "Get all cities with filters",
+        responses: [
+            new OA\Response(
+                response: 200,
+                description: 'City Found'
+            ),
+            new OA\Response(
+                response: 404,
+                description: 'City Not Found'
+            )
+        ]
+    )]
     public function index(CityFilterRequest $request)
     {
         $filters = $request->validated();
